[package]
name = "firefly-blutti"
version = "0.1.0"
edition = "2021"

[dependencies]
firefly-rust = { version="0.7.1", features=["alloc", "talc"] }
fixedstr = {version="0.5", features=["no-alloc"]}

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true      # Enable link-time optimization
