[package]
name = "firefly-blutti"
version = "0.9.0"
edition = "2021"

[dependencies]
firefly-rust = { version = "0.9.3", features = ["alloc", "talc"] }
fixedstr = { version = "0.5.9", features = ["no-alloc"] }
serde = { version = "1.0.228", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = { version = "1.0.145", default-features = false, features = [
    "alloc",
] }

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true      # Enable link-time optimization
